fix: page jump on lightbox due to scrollbar missing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,7 @@ html {
   --fg: #444;
   --fg-deep: #222;
   --fg-deeper: #111;
+  scrollbar-gutter: stable;
 }
 html:has(.lightbox) {
   overflow: hidden;
